# fuel-booth-contracts

./: .gitignore  README.md
game-score-contract/: .gitignore  Cargo.toml  Forc.toml  package-lock.json  test_echo.txt
game-score-contract/src/: a_player.sw  abi_race_board.sw  data_structures.sw  errors.sw  events.sw  game_score.sw  high_score.sw  interface.sw  main.sw  player.sw  race_board.sw
game-score-contract/src_bckg/: abi_race_board.sw  first_version.sw
game-score-contract/sway-api/contracts/: GameScoreContractAbi.d.ts  GameScoreContractAbi.hex.ts  index.ts
game-score-contract/sway-api/contracts/factories/: GameScoreContractAbi__factory.ts
game-score-contract/tests/: harness.rs  harnessHighScore.rs  harnessTest.rs
game-score-contract/v2_full_test/: harness.rs  harnessORG.rs
score-fe/: fuels.config.ts  package-lock.json  package.json
