[package]
name = "game-score-contract"
description = "Testing the ScoreBoard Sway contract on Fuel chain, with TypeScript"
version = "0.1.0"
edition = "2021"
authors = ["Kalmia"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.54.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harnessHighScore.rs"

[dependencies]
ascii = "=1.1.0"
crypto-hash = "0.3.4"
