[package]
name = "game-score-contracts"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["primoz <primoz.hrastar@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.62.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harnessTest.rs"

[dependencies]
ascii = "=1.1.0"
crypto-hash = "0.3.4"
sha2 = "0.9.5"
